Add required modules